# urb-k8s

./: .gitignore  .travis.yml  Makefile  README.md  conf.sh  cpp-framework.dockerfile  python-executor-runner.dockerfile  python-framework.dockerfile  redis.dockerfile  urb-bin-base.dockerfile  urb-executor-runner.dockerfile  urb-marathon.dockerfile  urb-python-base.dockerfile  urb-service.dockerfile  urb-zeppelin.dockerfile
etc/: urb.conf  (+4 more)
urb-core/source/cpp/liburb/: Makefile  meson.build
urb-core/source/cpp/liburb/mesos/include/mesos/: mesos.hpp  messages.proto  resource_provider.proto  resources.hpp  scheduler.proto  version.hpp
urb-core/source/cpp/liburb/mesos/include/mesos/fetcher/: fetcher.hpp
urb-core/source/cpp/liburb/mesos/include/mesos/scheduler/: scheduler.hpp
urb-core/source/cpp/liburb/python-bindings/: Makefile  setup.py
urb-core/source/cpp/liburb/python-bindings/executor/: setup.py
urb-core/source/cpp/liburb/python-bindings/interface/: setup.py
urb-core/source/cpp/liburb/python-bindings/native/: setup.py
urb-core/source/cpp/liburb/python-bindings/native_common/: ext_modules.py
urb-core/source/cpp/liburb/python-bindings/scheduler/: setup.py
urb-core/source/cpp/liburb/python-bindings/test/: test_executor_wrapper.sh
urb-core/source/cpp/liburb/source/: evhelper.hpp  executor_process.cpp  executor_process.hpp  message_broker.cpp  org_apache_mesos_MesosSchedulerDriver.h  scheduler_process.cpp  scheduler_process.hpp  timer.hpp
urb-core/source/cpp/liburb/test/: command_executor.cpp  docker_no_executor_framework.cpp  example_framework.cpp  http_framework.py  long_lived_framework.cpp  manual_test_redis_sentinel.cpp  test_executor_messages.cpp  test_message_broker.cpp  test_redis_async.cpp
urb-core/source/cpp/liburb/test/ext/: test_http_executor.cpp
(+317 files in other folders)
